--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -55,4 +55,16 @@
         android:layout_centerHorizontal="true"
         android:text="log in" />
 
+    <TextView
+        android:id="@+id/text_sign_up"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:text="sign up" />
+
 </RelativeLayout>
