--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:animateLayoutChanges="true"
     android:layout_height="match_parent">
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="login fragment"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
-
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_layout"
@@ -51,7 +42,7 @@
         android:id="@+id/button_signUp"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/button_login"
+        android:layout_below="@+id/password_layout"
         android:layout_centerHorizontal="true"
         android:text="Sign Up" />
 
